fixed sign in css bug, z-index bug, and signed in users now always redirect to dashboard

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -80,6 +80,7 @@ header
       border-bottom-left-radius: 7px
       border-bottom-right-radius: 7px
       text-align: center
+      z-index: 2
 
       a
         display: block
@@ -97,7 +98,7 @@ header
     position: absolute
     z-index: 2
     right: 0
-    top: 74px
+    top: 34px
     padding: 20px 14px
     border-radius: 7px
     border-top-right-radius: 0
